--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "nuxt": "^2.0.0",
+    "vue-recaptcha": "^1.3.0",
     "vue-recaptcha-v3": "^1.9.0"
   },
   "devDependencies": {
